# python-aws-data-blueprint

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  infrastructure.yml  pipeline-analytics.yml  pipeline-ingestion.yml  pipeline-processing.yml  reusable-build-push.yml
CONTRIBUTING/: index.html
DEVELOPMENT_PHILOSOPHY/: index.html
FEATURE_REQUEST_AUTOMATION/: index.html
LOCAL_DEVELOPMENT_DEPENDENCIES/: index.html
MEDALLION_ARCHITECTURE/: index.html
SHARED_LIBRARY_VERSIONING/: index.html
apps/example-analytics/: Dockerfile  README.md  pyproject.toml
apps/example-analytics/app/: __init__.py  main.py
apps/example-analytics/tests/: test_main.py
apps/example-app/: Dockerfile
apps/example-app/app/: lambda_handler.py
apps/example-ingestion/: Dockerfile  README.md  pyproject.toml
apps/example-ingestion/app/: __init__.py  main.py
apps/example-ingestion/tests/: test_main.py
apps/example-processing/: Dockerfile  README.md  pyproject.toml
apps/example-processing/app/: __init__.py  main.py
apps/example-processing/tests/: test_main.py
docs-src/: DOCUMENTATION_README.md  MEDALLION_ARCHITECTURE.md  medallion-architecture.md
infrastructure/: GITHUB_ACTIONS_ROLE.md  README.md  SETUP.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infrastructure/modules/: README.md
libs/example-data/: README.md  pyproject.toml
libs/example-data/example_data/: __init__.py  models.py  s3_paths.py
libs/example-data/tests/: test_models.py  test_s3_paths.py
meta/adr/: ADR-015-aws_cloud_provider.md  ADR-016-terraform_iac.md  ADR-017-github_oidc_aws_auth.md  ADR-018-medallion_architecture.md
meta/plans/init_repo/: 16-initialize-python-aws-data-blueprint.md  17-aws-integration-scaffolding.md  18-medallion-architecture-example.md  19-review-finalize-python-aws-blueprint.md
scripts/: ecr-helper.sh
search/: search_index.json
