[tool.poetry]
name = "example-analytics"
version = "0.1.0"
description = "Gold layer — aggregate silver data into business-ready metrics"
authors = ["{{GITHUB_OWNER}}"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.3"
example-data = { path = "../../libs/example-data", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
ruff = "^0.15"

[tool.poetry.scripts]
example-analytics = "app.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
