[tool.poetry]
name = "example-ingestion"
version = "0.1.0"
description = "Bronze layer — ingest raw data from external sources into S3"
authors = ["{{GITHUB_OWNER}}"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.3"
example-data = { path = "../../libs/example-data", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
ruff = "^0.15"

[tool.poetry.scripts]
example-ingestion = "app.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
